[package]
name = "compute-pi"
version = "0.2.4"
authors = ["Katsutoshi Seki"]
edition = "2018"
description = "A Rust library designed for computing pi to millions of digits."
license = "MIT"
repository = "https://github.com/sekika/compute-pi"
keywords = ["pi", "mathematics", "numerical"]
categories = ["algorithms", "mathematics"]

[[bin]]
name = "compute-pi"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rug = "1.24"
